[package]
name = "rx888_stream"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bytemuck = "1.14.0"
clap = { version = "4.4.10", features = ["derive"] }
ctrlc = "3.4.1"
debug_print = "1.0.0"
rusb = "0.9.3"
rusb-async = "0.0.1-alpha"
